src/objects/AstrumEventSettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <description>Holds settings for the scheduling rules of Events</description>
    <fields>
        <fullName>Astrum_Event_Status_Field_Form_ID__c</fullName>
        <inlineHelpText>Enter the ID of the html form element for the Status field after the &quot;Book It&quot; button is clicked.</inlineHelpText>
        <label>Astrum Event Status Field Form ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Onsite_Sales_Visit_Subject__c</fullName>
        <label>Default Onsite Sales Visit Subject</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_day_options_to_return__c</fullName>
        <label>Number day options to return</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_days_to_schedule_new_visits_out__c</fullName>
        <label>Number days to schedule new visits out</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Open_Blocks_SOQL_Limit__c</fullName>
        <label>Open Blocks SOQL Limit</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Open_Blocks_SOQL__c</fullName>
        <description>Code will default to 100 rows, unless specified differently here.</description>
        <inlineHelpText>Code will default to 100 rows, unless specified differently here.</inlineHelpText>
        <label>Open Blocks SOQL Limit</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>AstrumEventSettings</label>
</CustomObject>